<resources>
    <string name="app_name">HUE_Control</string>

    <string name="hello_world">Hello HUE world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_ip">Enter bridge IP address</string>
    <string name="edit_lightnumber">Enter light number</string>
    <string name="edit_hue">Enter hue</string>
    <string name="alert_ip_title">Invalid IP address</string>
    <string name="alert_ip_message">This is not a valid IP address</string>
    <string name="button_send">Send</string>
    <string name="saturation">Saturation:</string>
    <string name="brightness">Brightness:</string>
    <string name="hue">Hue:</string>
    <string name="onoff_off">Light OFF</string>
    <string name="onoff_on">Light ON</string>
    <string name="colorloop_off">Colorloop OFF</string>
    <string name="colorloop_on">Colorloop ON</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_hsbeditor">HSBeditorActivity</string>
    <string name="title_activity_brightness_editor">BrightnessEditorActivity</string>
</resources>
