<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#010101">

    <View
        android:id="@+id/view_editor_colorbox"
        android:layout_width="match_parent"
        android:layout_height="50px"
        android:background="#000000" />

    <TextView
        android:id="@+id/lbl_editor_lightid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/brightness"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/saturation"
            />
        <SeekBar
            android:id="@+id/seekbar_sat"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:max="100"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/brightness"
            />
        <SeekBar
            android:id="@+id/seekbar_bri"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:max="100"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/hue"
            />
        <SeekBar
            android:id="@+id/seekbar_hue"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:max="360"/>
    </LinearLayout>
    <ToggleButton
        android:id="@+id/toggle_onoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:disabledAlpha="1.2"
        android:textOff="@string/onoff_off"
        android:textOn="@string/onoff_on"
        android:layout_marginTop="30px"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/search"
        android:width="35px"
        android:height="35px"
        android:onClick="sendMessage"
        android:layout_marginTop="50px"/>



    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView_Main"
        android:layout_below="@+id/textView_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp" />

</LinearLayout>
